# OMSnake

./: .gitignore  Apple.hpp  AppleMaker.hpp  Button.hpp  CMakeLists.txt  CMakeSettings.json  Control.hpp  GameSuperviser.hpp  IGameObject.hpp  Player.hpp  README.md  Snake.hpp  main.cpp
Dependency/SFML-2.6.1/include/SFML/: Audio.hpp  GpuPreference.hpp  Graphics.hpp  Main.hpp  Network.hpp  OpenGL.hpp  System.hpp  Window.hpp
Dependency/SFML-2.6.1/include/SFML/Audio/: AlResource.hpp  Export.hpp  InputSoundFile.hpp  Listener.hpp  Music.hpp  OutputSoundFile.hpp  Sound.hpp  SoundBuffer.hpp  SoundBufferRecorder.hpp  SoundFileFactory.hpp  SoundFileReader.hpp  SoundFileWriter.hpp  SoundRecorder.hpp  SoundSource.hpp  SoundStream.hpp
Dependency/SFML-2.6.1/include/SFML/Graphics/: BlendMode.hpp  CircleShape.hpp  Color.hpp  ConvexShape.hpp  Drawable.hpp  Export.hpp  Font.hpp  Glsl.hpp  Glyph.hpp  Image.hpp  Rect.hpp  RectangleShape.hpp  RenderStates.hpp  RenderTarget.hpp  RenderTexture.hpp  RenderWindow.hpp  Shader.hpp  Shape.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Transform.hpp  Transformable.hpp  Vertex.hpp  VertexArray.hpp  VertexBuffer.hpp  View.hpp
Dependency/SFML-2.6.1/include/SFML/Network/: Export.hpp  Ftp.hpp  Http.hpp  IpAddress.hpp  Packet.hpp  Socket.hpp  SocketHandle.hpp  SocketSelector.hpp  TcpListener.hpp  TcpSocket.hpp  UdpSocket.hpp
Dependency/SFML-2.6.1/include/SFML/System/: Clock.hpp  Err.hpp  Export.hpp  FileInputStream.hpp  InputStream.hpp  Lock.hpp  MemoryInputStream.hpp  Mutex.hpp  NativeActivity.hpp  NonCopyable.hpp  Sleep.hpp  String.hpp  Thread.hpp  ThreadLocal.hpp  ThreadLocalPtr.hpp  Time.hpp  Utf.hpp  Vector2.hpp  Vector3.hpp
Dependency/SFML-2.6.1/include/SFML/Window/: Clipboard.hpp  Context.hpp  ContextSettings.hpp  Cursor.hpp  Event.hpp  Export.hpp  GlResource.hpp  Joystick.hpp  Keyboard.hpp  Mouse.hpp  Sensor.hpp  Touch.hpp  VideoMode.hpp  Vulkan.hpp  Window.hpp  WindowBase.hpp  WindowHandle.hpp
